syntax = "proto3";

package blog;

option go_package = "proto/";

service BlogService {
    rpc CreatePost(CreatePostRequest) returns (Post);
    rpc ReadPost(ReadPostRequest) returns (Post);
    rpc ReadAllPost(ReadAllPostRequest) returns (ReadAllPostResponse);
    rpc UpdatePost(UpdatePostRequest) returns (Post);
    rpc DeletePost(DeletePostRequest) returns (DeletePostResponse);
}

message Post {
    string post_id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
    string publication_date = 5;
    repeated string tags = 6;
}

message CreatePostRequest {
    string title = 1;
    string content = 2;
    string author = 3;
    string publication_date = 4;
    repeated string tags = 5;
}

message ReadPostRequest {
    string post_id = 1;
}

message ReadAllPostRequest{
    
}

message UpdatePostRequest {
    string post_id = 1;
    string title = 2;
    string content = 3;
    string author = 4;
    repeated string tags = 5;
}

message DeletePostRequest {
    string post_id = 1;
}

message DeletePostResponse {
    bool success = 1;
}

message ReadAllPostResponse{
    repeated Post posts = 1;
}